@@ -48,6 +48,7 @@ sunuo (0.3.0) unstable; urgency=low
   * login: print name of failed game server
   * login: log account creation
   * login: initialize new account with Flags=0
+  * login: support the "young" flag
   * debian: symlink base/Data to /etc/sunuo
   * debian: symlink base/var/log to /var/log/sunuo
   * debian: install SunUO.exe.config in /etc/sunuo/
